# options-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: pipeline.md
scripts/: healthcheck.py
src/pipeline/: __init__.py  config.py  db.py
src/pipeline/aggregators/: __init__.py  base.py  daily_sessions.py  monthly_sessions.py  option_ohlc.py  weekly_sessions.py
src/pipeline/collectors/: __init__.py  binance.py  binance_1m.py  deribit.py  hyperliquid.py
src/pipeline/flows/: __init__.py  aggregation.py  collection.py  main.py
